# kiper-grade-check

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/processed/: analyst_grades.csv  analyst_grades.parquet  comparison.csv  comparison.parquet  picks.csv  picks.parquet  team_outcomes.csv  team_outcomes.parquet
data/raw/report_card/: 2011.html  2012.html  2013.html  2014.html  2015.MISSING  2016.html  2017.html  2018.MISSING  2019.MISSING  2020.html  2021.html  2022.MISSING  2023.MISSING  2024.html  2025.MISSING
docs/superpowers/plans/: 2026-04-27-kiper-grade-check.md
docs/superpowers/specs/: 2026-04-27-kiper-grade-evaluation-design.md
notebooks/: 01-kiper-vs-reality.ipynb
src/kiper_grade_check/: __init__.py  cli.py  grade.py  pipeline.py
src/kiper_grade_check/sources/: nflverse.py  report_card.py
src/kiper_grade_check/transform/: careers.py  contracts.py  grades.py  team_wins.py
tests/: test_cli.py  test_grade.py  test_pipeline_build.py  test_pipeline_fetch.py  test_smoke.py
tests/fixtures/: report_card_2020_sample.html
tests/sources/: test_nflverse.py  test_report_card.py
tests/transform/: test_careers.py  test_contracts.py  test_grades.py  test_team_wins.py
