[project]
name = "kiper-grade-check"
version = "0.1.0"
description = "Evaluate Mel Kiper Jr.'s historical NFL draft grades against actual player outcomes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nflreadpy>=0.1.0",
    "pandas>=2.2",
    "pyarrow>=15",
    "numpy>=1.26",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "wayback>=0.4",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
kgc = "kiper_grade_check.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "jupyter>=1",
    "ipykernel>=6",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kiper_grade_check"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RET"]
ignore = ["E501", "B008"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
